--- a/index.html
+++ b/index.html
@@ -1,2 +1,25 @@
 <!DOCTYPE html>
-<h1>Surferacers</h1> "titulo de la pagina web"
+<head>
+    <title>Surferacers</title>
+</head>
+<body>
+  <img src="aslogo.png" alt="Logo del Juego" width="320" height="120" style="vertical-align:bottom" />
+  <div> 
+    <h1>Surferacers</h1> 
+    <P>Bienvenido a nuestro website del <em>servidor dedicado</em> para <strong>ASSETO CORSA</strong></P>
+   </div>
+   <div>
+    <h2>Calendario</h2>
+    <ul>
+        <li>Enero: F3</li>
+        <li>Febrero: stocks cars</li>
+        <li>Marzo: a designar</li>
+        <li>abril: a designar</li>
+        <li>Mayo: a designar</li>
+        <li>Octubre: a designar</li>
+        <li>Noviembre: a designar</li>
+        <li>Dicembre: a designar</li>
+    </ul>
+    <h6>En epoca estival no se organizaran eventos</h6>
+   </div>
+ </body>
