--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-<head>
-    <title>Surferacers</title>
-</head>
-<body>
-  <img src="aslogo.png" alt="Logo del Juego" width="320" height="120" style="vertical-align:bottom" />
-  <div> 
-    <h1>Surferacers</h1> 
-    <P>Bienvenido a nuestro website del <em>servidor dedicado</em> para <strong>ASSETO CORSA</strong></P>
-   </div>
-   <div>
-    <h2>Calendario</h2>
-    <ul>
+<html>
+  <Head>
+    <title>Surferacers id="index"</title>
+  </head>
+    <body>
+    <img src="aslogo.png" alt="Logo del Juego" width="320" height="120" style="vertical-align:bottom" href="./index.html" />
+    <nav>
+      <a href="./index.html">Inicio</a>
+      <a href="./normas.html">Normativa</a>
+    </nav>
+      <div id="titulo"> 
+        <h1>Surferacers </h1> 
+        <nav>
+          <ul>
+            <li><a href="#caelndario">Calendario</a></li>
+            <li><a href="#normas">Normas</a></li>
+          </ul>
+        </nav>
+        <P>Bienvenido a nuestro website del <em>servidor dedicado</em> para <strong>ASSETO CORSA</strong></P>
+      </div>
+      <div id="titulo"> 
+        <h1>Discord </h1> 
+        <a>https://discord.gg/CDqSc6s827</a>
+      </div>
+      <div id="calendario">
+       <h2>Calendario </h2>
+       <ul>
         <li>Enero: F3</li>
         <li>Febrero: stocks cars</li>
         <li>Marzo: a designar</li>
@@ -19,7 +34,18 @@
         <li>Octubre: a designar</li>
         <li>Noviembre: a designar</li>
         <li>Dicembre: a designar</li>
-    </ul>
-    <h6>En epoca estival no se organizaran eventos</h6>
-   </div>
+       </ul>
+       <h6>En epoca estival no se organizaran eventos</h6>
+      </div>
+      <div id="normas">
+        <h2>Normas para el servidor y Discord</h2>
+        <ul>
+           <li>1º: La norma más básica del servidor es: Tener un comportamiento adecuado. En caso contrario, incluyendo nombrar otros servidores, promocionar otros servicios (de forma directa o indirecta), usar hacks o cualquier programa externo que beneficie al jugador, uso de bug o exploits, insultar, timar, acosar, estafar, discriminar, el uso incorrecto de canales entre jugadores, uso de nombres desagradables, otros, será duramente sancionable y se evaluará caso por caso. Es importante reportar los casos de mal comportamiento para mantener una comunidad agradable.</li>
+           <li>2º: Si hay incidentes, que los tendras, TE JODES</li>
+           <li>3º: Es nuestro servidor y si nosotros decimos que te calles, y no cierras el pico: BAN</li>
+           <li>4º: a designar</li>
+        </ul>
+       </div>
  </body>
+</html>
+ 
