ultimos, de verdad

--- a/normas.html
+++ b/normas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <Head>
-    <title>Surferacers id="index"</title>
+    <title>Surferacers</title>
   </head>
     <body>
       <img src="aslogo.png" alt="Logo del Juego" width="320" height="120" style="vertical-align:bottom" />
