--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <Head>
-    <title>Surferacers id="index"</title>
+    <title>Surferacers</title>
   </head>
     <body>
     <img src="aslogo.png" alt="Logo del Juego" width="320" height="120" style="vertical-align:bottom" href="./index.html" />
@@ -13,8 +13,7 @@
         <h1>Surferacers </h1> 
         <nav>
           <ul>
-            <li><a href="#caelndario">Calendario</a></li>
-            <li><a href="#normas">Normas</a></li>
+            <li><a href="#calendario">Calendario</a></li>
           </ul>
         </nav>
         <P>Bienvenido a nuestro website del <em>servidor dedicado</em> para <strong>ASSETO CORSA</strong></P>
@@ -37,15 +36,6 @@
        </ul>
        <h6>En epoca estival no se organizaran eventos</h6>
       </div>
-      <div id="normas">
-        <h2>Normas para el servidor y Discord</h2>
-        <ul>
-           <li>1º: La norma más básica del servidor es: Tener un comportamiento adecuado. En caso contrario, incluyendo nombrar otros servidores, promocionar otros servicios (de forma directa o indirecta), usar hacks o cualquier programa externo que beneficie al jugador, uso de bug o exploits, insultar, timar, acosar, estafar, discriminar, el uso incorrecto de canales entre jugadores, uso de nombres desagradables, otros, será duramente sancionable y se evaluará caso por caso. Es importante reportar los casos de mal comportamiento para mantener una comunidad agradable.</li>
-           <li>2º: Si hay incidentes, que los tendras, TE JODES</li>
-           <li>3º: Es nuestro servidor y si nosotros decimos que te calles, y no cierras el pico: BAN</li>
-           <li>4º: a designar</li>
-        </ul>
-       </div>
  </body>
 </html>
  
