--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Surferacers</title>
   </head>
     <body>
-    <img src="aslogo.png" alt="Logo del Juego" width="320" height="120" style="vertical-align:bottom" href="./index.html" />
+    <img src="aslogo.png" alt="Logo de Assetto Corsa" width="320" height="120" style="vertical-align:bottom" href="./index.html" />
     <nav>
       <a href="./index.html">Inicio</a>
       <a href="./normas.html">Normativa</a>
