--- a/normas.html
+++ b/normas.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <Head>
-    <title>Surferacers</title>
+  <head>
+    <link href="style.css" rel="stylesheet"> 
+    <title >SURFERACERS</title>
   </head>
-    <body>
-      <img src="aslogo.png" alt="Logo del Juego" width="320" height="120" style="vertical-align:bottom" />
-      <nav>
-        <a href="./index.html">Inicio</a>
-        <a href="./normas.html">Normativa</a>
-      </nav>
-      <div id="titulo"> 
-        <h1>Surferacers </h1> 
-      </div>
+  <body>
+  <header>
+    <img src="./assets/asseto_corsa_logo.png" alt="Logo del ASSETO CORSA" width="320" height="120" style="vertical-align:bottom" href="./index.html" />
+    <nav>
+      <a href="./index.html">Inicio</a>
+      <a href="./normas.html">Normativa</a>
+      <a href="./eventos.html">Eventos</a>
+    </nav>
+        <h1 class='title'>SURFERACERS</h1> 
+  </header> 
         <div id="normas">
             <h2>Normas para el servidor y Discord</h2>
             <ul>
@@ -21,3 +23,5 @@
                <li>4º: a designar</li>
             </ul>
         </div>
+    </body>
+</html>
