--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <Head>
-    <title>Surferacers</title>
+  <head>
+    <link href="style.css" rel="stylesheet"> 
+    <title >SURFERACERS</title>
   </head>
-    <body>
-    <img src="aslogo.png" alt="Logo del Juego" width="320" height="120" style="vertical-align:bottom" href="./index.html" />
+  <body>
+  <header>
+    <img src="./assets/asseto_corsa_logo.png" alt="Logo del ASSETO CORSA" width="320" height="120" style="vertical-align:bottom" href="./index.html" />
     <nav>
       <a href="./index.html">Inicio</a>
       <a href="./normas.html">Normativa</a>
+      <a href="./eventos.html">Eventos</a>
     </nav>
-      <div id="titulo"> 
-        <h1>Surferacers </h1> 
+        <h1 class='title'>SURFERACERS</h1> 
+  </header> 
         <nav>
           <ul>
+            <li><a href="#discord">Discord</a></li>
             <li><a href="#calendario">Calendario</a></li>
           </ul>
         </nav>
         <P>Bienvenido a nuestro website del <em>servidor dedicado</em> para <strong>ASSETO CORSA</strong></P>
       </div>
-      <div id="titulo"> 
-        <h1>Discord </h1> 
+      <div id="discord"> 
+        <h2>Discord </h2> 
         <a>https://discord.gg/CDqSc6s827</a>
       </div>
       <div id="calendario">
@@ -36,6 +40,6 @@
        </ul>
        <h6>En epoca estival no se organizaran eventos</h6>
       </div>
- </body>
+   </body>
 </html>
  
