correccion errores last 3 commits, mejoras estructura

--- a/index.html
+++ b/index.html
@@ -6,27 +6,37 @@
   </head>
   <body>
   <header>
-    <img src="./assets/asseto_corsa_logo.png" alt="Logo del ASSETO CORSA" width="320" height="120" style="vertical-align:bottom" href="./index.html" />
+    <img src="./assets/asseto_corsa_logo.png" alt="Logo del ASSETO CORSA" width="320" height="120"  href="./index.html" />
     <nav>
       <a href="./index.html">Inicio</a>
       <a href="./normas.html">Normativa</a>
       <a href="./eventos.html">Eventos</a>
+      <form>
+        <label for="username">Username:</label>
+        <input type="text" name="username" id="username">
+        <br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password">
+        <input type="submit" value="login">
+      </form>
     </nav>
-        <h1 class='title'>SURFERACERS</h1> 
   </header> 
-        <nav>
+     <main>
+      <h1 class='title'>SURFERACERS</h1> 
+       <article>
+         <nav>
           <ul>
             <li><a href="#discord">Discord</a></li>
             <li><a href="#calendario">Calendario</a></li>
           </ul>
-        </nav>
+         </nav>
         <P>Bienvenido a nuestro website del <em>servidor dedicado</em> para <strong>ASSETO CORSA</strong></P>
-      </div>
-      <div id="discord"> 
+       </div>
+       <div id="discord"> 
         <h2>Discord </h2> 
         <a>https://discord.gg/CDqSc6s827</a>
-      </div>
-      <div id="calendario">
+       </div>
+       <div id="calendario">
        <h2>Calendario </h2>
        <ul>
         <li>Enero: F3</li>
@@ -39,7 +49,9 @@
         <li>Dicembre: a designar</li>
        </ul>
        <h6>En epoca estival no se organizaran eventos</h6>
-      </div>
+       </div>
+     </article>
+  </main>
    </body>
 </html>
  
