--- a/eventos.html
+++ b/eventos.html
@@ -1,70 +1,76 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="style.css" rel="stylesheet"> 
-    <title >SURFERACERS</title>
- </head>
- <body>
- <header>
-    <img src="./assets/asseto_corsa_logo.png" alt="Logo del ASSETO CORSA" width="320" height="120" href="./index.html" />
-    <nav>
-      <a href="./index.html">Inicio</a>
-      <a href="./normas.html">Normativa</a>
-      <a href="./eventos.html">Eventos</a>
-      <form>
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username">
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password">
-        <input type="submit" value="login">
-      </form>
-    </nav>
- </header> 
+    <link href="style.css" rel="stylesheet" />
+    <title>SURFERACERS</title>
+  </head>
+  <body>
+    <header>
+      <img
+        src="./assets/asseto_corsa_logo.png"
+        alt="Logo del ASSETO CORSA"
+        width="320"
+        height="120"
+        href="./index.html"
+      />
+      <nav>
+        <a href="./index.html">Inicio</a>
+        <a href="./normas.html">Normativa</a>
+        <a href="./eventos.html">Eventos</a>
+        <form>
+          <label for="username">Username:</label>
+          <input type="text" name="username" id="username" />
+          <br />
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" />
+          <input type="submit" value="login" />
+        </form>
+      </nav>
+    </header>
     <main>
-       <h1 class='title'>SURFERACERS</h1> 
-         <article>
-         <h2>info eventos: </h2>
-         </article>
-             <figure>
-                <img src="./assets/circuito_interlagos.jpg" width="320" height="120">
-                <h3>Interlagos</h3>
-                <p>F3 "14 de febrero" 16:45 Q:10min  R:15min</p>
-                <form>
-                <h4>Regristrarse: como invitado</h4>
-                <label for="username">Username:</label>
-                <input type="text" name="username" id="username">
-                <br>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password">
-                </form>
-             </figure>
-             <figure>
-                <img src="./assets/circuito_interlagos.jpg" width="320" height="120">
-                <h3>Redbull ring</h3>
-                <p>F3 "21 de febrero" 16:45 Q:10min  R:15min</p>
-                <form>
-                <h4>Regristrarse: como invitado o <a href="./register.html" target="_blank">Registrate</a></h4>
-                <label for="username">Username:</label>
-                <input type="text" name="username" id="username">
-                <br>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password">
-                </form>  
-             </figure>
-             <figure>
-                <img src="./assets/circuito_interlagos.jpg" width="320" height="120">
-                <h3>Imola</h3>
-                <p>F3 "29 de febrero" 16:45 Q:10min  R:15min</p>
-                <form>
-                <h4>Regristrarse: como invitado</h4>
-                <label for="username">Username:</label>
-                <input type="text" name="username" id="username">
-                <br>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password">
-                </form>
-             </figure>
-     </main>
-    </body>        
+      <h1 class="title">SURFERACERS</h1>
+      <article>
+        <h2>info eventos:</h2>
+      </article>
+      <figure>
+        <img src="./assets/circuito_interlagos.jpg" width="320" height="120" />
+        <h3>Interlagos</h3>
+        <p>F3 "14 de febrero" 16:45 Q:10min R:15min</p>
+        <form>
+          <h4>Regristrarse: como invitado</h4>
+          <label for="username">Username:</label>
+          <input type="text" name="username" id="username" />
+          <br />
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" />
+        </form>
+      </figure>
+      <figure>
+        <img src="./assets/circuito_interlagos.jpg" width="320" height="120" />
+        <h3>Redbull ring</h3>
+        <p>F3 "21 de febrero" 16:45 Q:10min R:15min</p>
+        <form>
+          <h4>Regristrarse: como invitado o <a href="./register.html" target="_blank">Registrate</a></h4>
+          <label for="username">Username:</label>
+          <input type="text" name="username" id="username" />
+          <br />
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" />
+        </form>
+      </figure>
+      <figure>
+        <img src="./assets/circuito_interlagos.jpg" width="320" height="120" />
+        <h3>Imola</h3>
+        <p>F3 "29 de febrero" 16:45 Q:10min R:15min</p>
+        <form>
+          <h4>Regristrarse: como invitado</h4>
+          <label for="username">Username:</label>
+          <input type="text" name="username" id="username" />
+          <br />
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" />
+        </form>
+      </figure>
+    </main>
+  </body>
 </html>
