--- a/normas.html
+++ b/normas.html
@@ -1,39 +1,52 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="style.css" rel="stylesheet"> 
-    <title >SURFERACERS</title>
+    <link href="style.css" rel="stylesheet" />
+    <title>SURFERACERS</title>
   </head>
   <body>
-  <header>
-     <img src="./assets/asseto_corsa_logo.png" alt="Logo del ASSETO CORSA" width="320" height="120"  href="./index.html" />
-     <nav>
-      <a href="./index.html">Inicio</a>
-      <a href="./normas.html">Normativa</a>
-      <a href="./eventos.html">Eventos</a>
-      <form>
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username">
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password">
-        <input type="submit" value="login">
-      </form>
-     </nav>
-  </header> 
-     <main>
-      <h1 class="title">SURFERACERS</h1> 
-       <article>
-         <div id="normas">
-            <h2>Normas para el servidor y Discord</h2>
-            <ul>
-               <li>1º: La norma más básica del servidor es: Tener un comportamiento adecuado. En caso contrario, incluyendo nombrar otros servidores, promocionar otros servicios (de forma directa o indirecta), usar hacks o cualquier programa externo que beneficie al jugador, uso de bug o exploits, insultar, timar, acosar, estafar, discriminar, el uso incorrecto de canales entre jugadores, uso de nombres desagradables, otros, será duramente sancionable y se evaluará caso por caso. Es importante reportar los casos de mal comportamiento para mantener una comunidad agradable.</li>
-               <li>2º: Si hay incidentes, que los tendras, TE JODES</li>
-               <li>3º: Es nuestro servidor y si nosotros decimos que te calles, y no cierras el pico: BAN</li>
-               <li>4º: a designar</li>
-            </ul>
-         </div>
-       </article>
-     </main>
-   </body>
+    <header>
+      <img
+        src="./assets/asseto_corsa_logo.png"
+        alt="Logo del ASSETO CORSA"
+        width="320"
+        height="120"
+        href="./index.html"
+      />
+      <nav>
+        <a href="./index.html">Inicio</a>
+        <a href="./normas.html">Normativa</a>
+        <a href="./eventos.html">Eventos</a>
+        <form>
+          <label for="username">Username:</label>
+          <input type="text" name="username" id="username" />
+          <br />
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" />
+          <input type="submit" value="login" />
+        </form>
+      </nav>
+    </header>
+    <main>
+      <h1 class="title">SURFERACERS</h1>
+      <article>
+        <div id="normas">
+          <h2>Normas para el servidor y Discord</h2>
+          <ul>
+            <li>
+              1º: La norma más básica del servidor es: Tener un comportamiento adecuado. En caso contrario, incluyendo
+              nombrar otros servidores, promocionar otros servicios (de forma directa o indirecta), usar hacks o
+              cualquier programa externo que beneficie al jugador, uso de bug o exploits, insultar, timar, acosar,
+              estafar, discriminar, el uso incorrecto de canales entre jugadores, uso de nombres desagradables, otros,
+              será duramente sancionable y se evaluará caso por caso. Es importante reportar los casos de mal
+              comportamiento para mantener una comunidad agradable.
+            </li>
+            <li>2º: Si hay incidentes, que los tendras, TE JODES</li>
+            <li>3º: Es nuestro servidor y si nosotros decimos que te calles, y no cierras el pico: BAN</li>
+            <li>4º: a designar</li>
+          </ul>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
