added Privacidad de datos

--- a/index.html
+++ b/index.html
@@ -58,4 +58,7 @@
       </article>
     </main>
   </body>
+  <footer>
+    <a href="./privacy.html">Politica de privacidad</a>
+  </footer>
 </html>
