added legal.html, added tag article privacy.html

--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
   </body>
   <footer>
     <a href="./privacy.html">Politica de privacidad</a>
+    <a href="./legal.html">Aviso legal</a>
   </footer>
 </html>
