--- a/privacy.html
+++ b/privacy.html
@@ -208,5 +208,9 @@
         </p>
       </article>
     </main>
+    <footer>
+      <a href="./privacy.html">Politica de privacidad</a>
+      <a href="./legal.html">Aviso legal</a>
+    </footer>
   </body>
 </html>
