--- a/register.html
+++ b/register.html
@@ -38,5 +38,9 @@
       <input type="password" id="password" name="password" />
       <input type="submit" value="register" />
     </form>
+    <footer>
+      <a href="./privacy.html">Politica de privacidad</a>
+      <a href="./legal.html">Aviso legal</a>
+    </footer>
   </body>
 </html>
