--- a/eventos.html
+++ b/eventos.html
@@ -72,5 +72,9 @@
         </form>
       </figure>
     </main>
+    <footer>
+      <a href="./privacy.html">Politica de privacidad</a>
+      <a href="./legal.html">Aviso legal</a>
+    </footer>
   </body>
 </html>
