--- a/legal.html
+++ b/legal.html
@@ -36,5 +36,9 @@
         <p>No necesitamos aviso legal, por ahora, quien sabe quizas acabamos generando ingresos...</p>
       </article>
     </main>
+    <footer>
+      <a href="./privacy.html">Politica de privacidad</a>
+      <a href="./legal.html">Aviso legal</a>
+    </footer>
   </body>
 </html>
