--- a/normas.html
+++ b/normas.html
@@ -48,5 +48,9 @@
         </div>
       </article>
     </main>
+    <footer>
+      <a href="./privacy.html">Politica de privacidad</a>
+      <a href="./legal.html">Aviso legal</a>
+    </footer>
   </body>
 </html>
