added hipervinculo para el discord

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>Bienvenido a nuestro website del <em>servidor dedicado</em> para <strong>ASSETO CORSA</strong></p>
         <div id="discord">
           <h2>Discord</h2>
-          <a>https://discord.gg/CDqSc6s827</a>
+          <a href="https://discord.gg/Z7em5YwCTE">Discord</a>
         </div>
         <div id="calendario">
           <h2>Calendario</h2>
