probando el visual desde el curro

--- a/eventos.html
+++ b/eventos.html
@@ -30,7 +30,7 @@
     <main>
       <h1 class="title">SURFERACERS</h1>
       <article>
-        <h2>info eventos:</h2>
+        <h2>Info eventos:</h2>
       </article>
       <figure>
         <img src="./assets/circuito_interlagos.jpg" width="320" height="120" />
